docs/v4.0.2/_sources/gallery/experiment/sphere/sphere_coupling_vs_diameter.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/experiment/sphere/sphere_coupling_vs_diameter.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_experiment_sphere_sphere_coupling_vs_diameter.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_experiment_sphere_sphere_coupling_vs_diameter.py:


Sphere: Coupling vs diameter
============================

.. GENERATED FROM PYTHON SOURCE LINES 8-9

Importing the package dependencies: numpy, PyMieSim

.. GENERATED FROM PYTHON SOURCE LINES 9-51

.. code-block:: Python

    import numpy
    from PyMieSim.units import ureg

    from PyMieSim.experiment.detector import CoherentModeSet
    from PyMieSim.experiment.scatterer import SphereSet
    from PyMieSim.experiment.source import GaussianSet, PolarizationSet
    from PyMieSim.experiment import Setup
    from PyOptik import Material

    polarization_set = PolarizationSet(
        angles=[90.0] * ureg.degree,
    )

    source = GaussianSet(
        wavelength=[1200] * ureg.nanometer,
        polarization=polarization_set,
        optical_power=[1e-3] * ureg.watt,
        numerical_aperture=[0.1] * ureg.AU,
    )
    scatterer = SphereSet(
        diameter=numpy.linspace(100, 10000, 600) * ureg.nanometer,
        material=[Material.BK7],
        medium_refractive_index=[1.0] * ureg.RIU,
        source=source,
    )

    detector = CoherentModeSet(
        mode_number=["LP01", "LP11", "LP02"],
        numerical_aperture=[0.2] * ureg.AU,
        rotation=[0] * ureg.degree,
        phi_offset=[0.0] * ureg.degree,
        gamma_offset=[0.0] * ureg.degree,
        sampling=[600],
        mean_coupling=True,
        polarization_filter=None,
    )

    experiment = Setup(scatterer=scatterer, source=source, detector=detector)

    dataframe = experiment.get("coupling", drop_unique_level=True, scale_unit=True)

    dataframe.plot(x="scatterer:diameter")



.. image-sg:: /gallery/experiment/sphere/images/sphx_glr_sphere_coupling_vs_diameter_001.png
   :alt: sphere coupling vs diameter
   :srcset: /gallery/experiment/sphere/images/sphx_glr_sphere_coupling_vs_diameter_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Figure size 800x500 with 1 Axes>




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.803 seconds)


.. _sphx_glr_download_gallery_experiment_sphere_sphere_coupling_vs_diameter.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: sphere_coupling_vs_diameter.ipynb <sphere_coupling_vs_diameter.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: sphere_coupling_vs_diameter.py <sphere_coupling_vs_diameter.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: sphere_coupling_vs_diameter.zip <sphere_coupling_vs_diameter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
